[package]
name = "upsauce"
version = "0.1.0"
edition = "2021"
authors = ["moriar1"]
license = "MIT license"
description = "UpSauce uploads your image on linx-server instance and get the links to it found on SauceNAO as Markdown string."
readme = "README.md"
repository = "https://github.com/moriar1/UpSauce"
keywords = ["cli", "saucenao", "linx-server"]

[dependencies]
rustnao = "0.3.4"
serde_json = "1.0.133"

[[bin]]
name = "upsauce"
